--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,51 @@
 @import './common';
 @import './example';
+
+.search-form {
+    background-color: aqua;
+    padding-top: 10px;
+    padding-bottom: 10px;
+};
+
+.input-btn-wrap {
+    display: flex;
+    width: 100%;
+gap: 20px;
+};
+
+.input {
+    margin-left: auto;
+};
+
+.btn-search {
+    margin-right: auto;
+};
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    row-gap: 30px;
+    padding-top: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.photo-card {
+    width: 300px;
+}
+
+.load-more {
+    display: block;
+    margin: 10px auto;
+    border-radius: 4px;
+        background-color: #0b5685;
+        border: none;
+        color: #FFFFFF;
+        text-align: center;
+        font-size: 20px;
+        padding: 10px;
+        width: 150px;
+        transition: all 0.5s;
+        cursor: pointer;
+}
