--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -35,9 +35,16 @@ gap: 20px;
     width: 300px;
 }
 
+.container {
+    width: 100%;
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+}
+
 .load-more {
-    display: block;
-    margin: 10px auto;
+    margin: auto;
     border-radius: 4px;
         background-color: #0b5685;
         border: none;
